--- a/f8c2a1e756ae4cb616a181bd75dbba5f/pages/Light/start.wxml
+++ b/f8c2a1e756ae4cb616a181bd75dbba5f/pages/Light/start.wxml
@@ -1,7 +1,6 @@
+<image class="pic" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1544073498655&di=8285198e5b87ce5bf6c8be1e34c942cd&imgtype=0&src=http%3A%2F%2Fimgsrc.baidu.com%2Fimage%2Fc0%253Dshijue1%252C0%252C0%252C294%252C40%2Fsign%3De39dd02e0055b31988f48a362bc0e853%2Feac4b74543a9822683a2b7088082b9014a90ebba.jpg" mode="scaleToFill" >
+</image>
 
-<view class="container">
-   <!-- <image src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1544588311&di=d029629e5087a387e0fb6d42cbdf8f30&imgtype=jpg&er=1&src=http%3A%2F%2Fimgsrc.baidu.com%2Fimage%2Fc0%253Dshijue1%252C0%252C0%252C294%252C40%2Fsign%3Dacc9f3f5a164034f1bc0ca45c7aa1344%2F79f0f736afc37931ed67bb01e1c4b74543a9118e.jpg' class='pic' ></image> -->
-<!--pages/mine/mine.wxml-->
   <view class="section">       <!-- 第一行 -->
     <view class="content">
       <text>蓝牙开关</text>
@@ -77,10 +76,10 @@
         <view class="body-view">
         <switch bindchange="switchChange"/>
         </view><text class='ziti4'>是否常亮</text>
-        <input name="senddata" maxlength='4' value='1.00'/>
+        <input name="senddata1" maxlength='4' value='1.00'/> 
         <button size="mini" formType="submit">发送</button>
         <button size="mini" formType="reset">清空</button>
       </form>
     </view>
 </block>
-</view>
+
